<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Gildit</string>
  <string name="action_settings">Settings</string>
  <string name="close">Close</string>
  <string name="pick_subreddit">Pick subreddit</string>
  <string name="share">share</string>
  <string name="save">save</string>
  <string name="hide">hide</string>
  <string name="report">report</string>
  <string name="to">to /r/</string>
  <string name="comments">comments</string>
  <string name="submissionThumbnail">Submission thumbnail</string>
  <string name="pickSubreddit">/r/</string>
  <string name="frontpage">front page</string>
  <string name="view_subreddit">View subreddit</string>
  <string name="cancel">Cancel</string>
  <string name="view">View</string>
  <string name="linkSubmissionDetails">/u/%1$s to /r/%2$s</string>
  <string name="navigate">Navigate</string>

</resources>
